Add random challenge solutions to the repo